# Synapse

./: .dockerignore  .env.local.example  .gitignore  BUILD_COMPLETE.md  Dockerfile  FEATURES.md  JUDGES_GUIDE.md  QUICKSTART.md  README.md  docker-compose.aws.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/mobile/: .env.local.example  app.json  app.tsx  index.ts  package.json  tailwind.config.ts  tsconfig.json
apps/voice-bridge/: .env.local.example  Dockerfile  package.json  tsconfig.json
apps/voice-bridge/src/: index.ts
apps/web/: next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/components/auth/: AuthProvider.tsx  AuthTabs.tsx
apps/web/components/layout/: AppShell.tsx
apps/web/components/ledger/: CostMeter.tsx  TxFeed.tsx
apps/web/components/network/: AgentGraph3D.tsx  NetworkModal.tsx
apps/web/components/plan/: PlanTree.tsx
apps/web/components/studio/: AuctionPanel.tsx  (+1 more)
apps/web/lib/: demo-data.ts  session-view.ts  utils.ts
contracts/: Cargo.toml  README.md  deployments.example.json
contracts/dispute/: Cargo.toml
contracts/dispute/src/: lib.rs
contracts/session-budget/: Cargo.toml
contracts/session-budget/src/: lib.rs
contracts/task-escrow/: Cargo.toml
contracts/task-escrow/src/: lib.rs
deploy/: aws-docker.md
scripts/: bootstrap-stellar.ts  plan-contract-deploy.ts  seed-agents.ts
seed/: agents.json
supabase/migrations/: 0001_init.sql
(+48 files in other folders)
