[workspace]
resolver = "2"
members = [
  "task-escrow",
  "session-budget",
  "dispute",
]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
